--- a/src/Mint-Y/gtk-3.0/sass/tweak-apps/_tweak-common.scss
+++ b/src/Mint-Y/gtk-3.0/sass/tweak-apps/_tweak-common.scss
@@ -145,13 +145,27 @@ decoration {
 //
 // Titlebuttons
 //
-button.titlebutton:not(.appmenu) {
-  headerbar &,
-  .titlebar &,
-  headerbar.selection-mode & {
+headerbar,
+.titlebar,
+.background headerbar,
+.background .titlebar,
+headerbar.selection-mode {
+
+  &.default-decoration button.titlebutton { // no vertical padding for ssd buttons
+    padding-top: 0px;                       // already handled by the titlebar-padding
+    padding-bottom: 0px;
+    padding-right: 0px;
+    padding-left: 0px;
+    min-width: 22px;
+    min-height: 22px;
+    margin: 0;
+  }
+
+  button.titlebutton {
+
+    @extend .image-button;
 
     @include button(undecorated);
-    background-color: transparentize($header_bg, 0.5);
 
     &:hover {
       @include button(header-hover);
@@ -159,25 +173,42 @@ button.titlebutton:not(.appmenu) {
     &:active, &:checked {
       @include button(header-active);
     }
+
+    &.close, &.maximize, &.minimize {
+      &, &:hover, &:active, &:active:hover, &:disabled {
+        color: transparent;
+        background-color: transparent;
+        background-position: center;
+        background-repeat: no-repeat;
+        border-width: 0;
+        box-shadow: none;
+      }
+
+      &:backdrop {
+        &, &:hover, &:active, &:active:hover, &:disabled {
+          opacity: 1;
+        }
+      }
+    }
 		
-    // // Load png assets for each button
-    // @each $n, $k in ('close','close'), ('maximize','max'), ('minimize','min') {
-    //   @each $l, $m in ('',''), (':backdrop','-backdrop'), (':hover','-hover'), (':active','-active') {
-    //     &.#{$n}#{$l} {
-    //       background-image: -gtk-scaled(url('assets/titlebutton-#{$k}#{$m}#{$asset_suffix}.png'),
-    //                                     url('assets/titlebutton-#{$k}#{$m}#{$asset_suffix}@2.png'));
-    //     }
-    //   }
-    // }
+    // Load png assets for each button
+    @each $n, $k in ('close','close'), ('maximize','max'), ('minimize','min') {
+      @each $l, $m in ('',''), (':backdrop','-backdrop'), (':hover','-hover'), (':active','-active') {
+        &.#{$n}#{$l} {
+          background-image: -gtk-scaled(url('assets/titlebutton-#{$k}#{$m}#{$asset_suffix}.png'),
+                                        url('assets/titlebutton-#{$k}#{$m}#{$asset_suffix}@2.png'));
+        }
+      }
+    }
     
-    // .fullscreen &,
-    // .maximized & {
-    //   @each $l, $m in ('',''), (':backdrop','-backdrop'), (':hover','-hover'), (':active','-active') {
-    //     &.maximize#{$l} {
-    //       background-image: -gtk-scaled(url('assets/titlebutton-resize#{$m}#{$asset_suffix}.png'),
-    //                                     url('assets/titlebutton-resize#{$m}#{$asset_suffix}@2.png'));
-    //     }
-    //   }
-    // }
+    .fullscreen &,
+    .maximized & {
+      @each $l, $m in ('',''), (':backdrop','-backdrop'), (':hover','-hover'), (':active','-active') {
+        &.maximize#{$l} {
+          background-image: -gtk-scaled(url('assets/titlebutton-resize#{$m}#{$asset_suffix}.png'),
+                                        url('assets/titlebutton-resize#{$m}#{$asset_suffix}@2.png'));
+        }
+      }
+    }
   }
 }
