--- a/src/Mint-Y/gtk-3.0/sass/tweak-apps/_tweak-drawing.scss
+++ b/src/Mint-Y/gtk-3.0/sass/tweak-apps/_tweak-drawing.scss
@@ -130,6 +130,6 @@ $container_padding: 2px;
   //
   // reset
   //
-    border-radius: 5px;
+    color: none;
   }
 }
